--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
     "antd": "^5.16.1",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
-    "dayjs": "^1.11.10",
+    "luxon": "^3.4.4",
     "mobx": "^6.12.3",
     "mobx-react-lite": "^4.0.7",
-    "moment": "^2.30.1",
     "next": "14.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-inlinesvg": "^4.1.3",
     "react-query": "^3.39.3",
+    "react-svg": "^16.1.34",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
